@@ -1,0 +1,86 @@
+/* This is one of the README files for libgphoto2/camlibs/digigr8. This is an 
+ * integral part of the libgphoto2/camlibs/digigr8 library source code and is 
+ * distributed with that source code under the LGPL license. a copy of which 
+ * license may be seen in the head directory of libgphoto2, in the file 
+ * COPYING.
+ * This file copyright Theodore Kilgore, 12/17/2010.
+ */ 
+
+CONCERNING 0x2770:0x9051 CAMERAS:
+
+As of 12/17/2010, the only known camera with this USB ID string is the 
+"Lego Bionicle," apparently produced by Digital Blue for Lego. Its 
+functionality is very basic. On the package it says the camera is able to take 
+40 photos, but in fact the number of photos is variable. For, they are all 
+compressed. 
+
+Since the compression algorithm is the same as that in the 0x905C cameras, this  
+camera is quite usable, for what it is. Resolution for this camera in still 
+mode appears to be nonadjustable and fixed at 640x480. 
+
+The camera has two buttons on it. one on the top and one on the rear. The 
+button on top is the shutter button, of course. The button on the rear is 
+often called the "mode" button on other cameras, and it will do such things
+as to switch the resolution mode, the compression mode, the continuous shooting
+mode, and such. But that is on other cameras. Here, that button is a "delete"
+button and will perform no other function. To delete the last photo, press that 
+button. To delete all, hold it down longer. The photos will be deleted then,
+one by one, starting with the last one. The small LCD window on the rear of the
+camera will show the decreasing number of photos while the button is being held.
+
+To the best of my ability to determine, the camera has no clip option, 
+no delayed-shooting option, and no multi-frame clips intended for AVI images.
+As a still camera it will do still photos only, and those will be of dimensions
+640x480. 
+
+This camera also supports the option "gphoto2 --capture-preview" which 
+means that the camera shoots an image which is immediately downloaded, not
+being stored on the camera at all. If gphoto2 --capture-preview is done, then
+the resulting frame comes out of the camera at 320x240 resolution. This 
+resolution setting is in fact adjustable. Those who are curious may consult
+
+/linux(recent version)/drivers/media/video/gspca/sq905c.c
+
+where resolution-choosing is completely supported. That file supports the
+"webcam" functionality of the cameras supported in still mode in 
+libgphoto2/camlibs/digigr8. Since I have already made the minor changes
+in my kernel source tree which make this camera work as a webcam, I also
+mention here that the camera will work as a webcam, too. I only needed to
+add the USB Vendor:Product number in the aforementioned kernel source file,
+then to run "make modules" and "make modules_install." I was then able to 
+make the camera to stream and to choose any of the resolution settings
+640x480, 320x240, and 160x120. I promise to add the camera there formally, as
+soon as I get around to it, and then after understandable time lag the change
+will appear in the kernel source tree, too. 
+
+
+WARNING: The --capture-preview option *will* delete all photos on the camera.
+
+
+The option gphoto2 -D is therefore supported, too. However, the user should
+note that the USB command to delete is the same as the USB command to shoot a
+frame (gphoto2 option is --capture-preview). Again. If you shoot a frame with
+the Lego Bionicle, it will delete whatever photos are on the camera !!!
+
+
+
+WARRANTY? 
+
+	Absolutely not. No warranty. Never. Not responsible for any actual
+	or potential damage or consequences to anyone or to the equipment of
+	anyone for using this program, whether the alleged damage or alleged
+	consequences are claimed to be real, imaginary, direct, collateral,
+	for pain and suffering, or are claimed to be inflicted upon any
+	"third party" who is not the user or installer of the program. The
+	program has been written for my pleasure and to broaden and deepen
+	my knowledge of computer hardware and software. The program has not
+	been written with the immediate expectation of financial gain or
+	profit on my part, nor has it been commissioned for pay. It is
+	presumed that any end-user of this program will have access to the
+	source code of the program and can judge for himself or herself
+	whether he/she wishes to use it or not, or can consult someone with
+	appropriate expertise to make such a judgment. 
+
+
+Theodore Kilgore
+12/17/2010
